exports[`(.not).toHaveAcceptedStatus > using axios > .not.toHaveAcceptedStatus > fails when response have status code 202 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveAcceptedStatus()</intensity>

Expected status code to not be 202 received:
  <red>202</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 202,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveAcceptedStatus > using axios > .toHaveAcceptedStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveAcceptedStatus()</intensity>

Expected status code to be 202 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveAcceptedStatus > using got > .not.toHaveAcceptedStatus > fails when response have status code 202 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveAcceptedStatus()</intensity>

Expected status code to not be 202 received:
  <red>202</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 202,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveAcceptedStatus > using got > .toHaveAcceptedStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveAcceptedStatus()</intensity>

Expected status code to be 202 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
